2007-02-17 Nicolas Roffet <nicolas-kde@roffet.com>
	* Code optimisation and clean-up.
	* The GraphicsItem "ray result" is now a SVG picture.

2007-02-13 Nicolas Roffet <nicolas-kde@roffet.com>
	* Code optimisation and clean-up.

2007-02-10 Nicolas Roffet <nicolas-kde@roffet.com>
	* GUI: New GraphicsView item: laser ray. Now the player can see laser rays on the board to check if he placed the balls correctly on the board and to understand better how the interactions in the black box do work. At the end of the game, he can also see the laser rays of the solution.
	* Separation of the class KBBBoard in 2 with the creation of the class KBBBallsOnBoard. The 1st one manages the game, the second one the boards.
	* Interaction result "HIT" is now diplayed on the board like every other interaction result.
	* Introduced contants to better manage the superposition order of the different graphic elements of the widget.
	* And some clean-up...

2007-02-09 Nicolas Roffet <nicolas-kde@roffet.com>
	* Right mouse button can now be used to place markers on the black box: position "unsure" and marker "nothing".
	* The opposite border position of a laser ray is now highlighted, when the mouse is moving over one of the border position.
	* Menu item (and action) "resize" removed. (It was unnecessary).

2007-02-08 Nicolas Roffet <nicolas-kde@roffet.com>
	* Code clean-up to solve the issues found by the English Breakfast Network (on  http://www.englishbreakfastnetwork.org/krazy/reports/kde-4.0/kdegames/kblackbox/ ).

2007-02-07 Nicolas Roffet <nicolas-kde@roffet.com>
	* More SVG: The black box disposes now of a question mark. Lasers intend to try to look like lasers.

2007-02-03 Nicolas Roffet <nicolas-kde@roffet.com>
	* Changed the way preferences are managed. It's not anymore with KSharedConfigPtr but with "KConfig XT". Good consequence: the following crash by closing the application disappeared: "Fatal Error: Accessed global static 'KGlobalPrivate *globalData()' after destruction." :)