@@ -1,4 +1,8 @@
 2007-02-17 Nicolas Roffet <nicolas-kde@roffet.com>
+	* Replaced the texts "H" and "R" by new symbols (SVG items).
+	* Widget Background has now the standard WindowBackground user defined color.
+
+2007-02-17 Nicolas Roffet <nicolas-kde@roffet.com>
 	* Code optimisation and clean-up.
 	* The GraphicsItem "ray result" is now a SVG picture.
 
